--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,14 @@
 
     <section class="content">
         <div class="header-content">
-            <div class="nav-bar">
+
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <div class="nav-bar" id="nav-menu">
                 <a href="index.html">Home</a> |
                 <a href="about.html">About</a> |
                 <a href="contact.html">Contact</a>
@@ -228,14 +235,14 @@
         </div>
     </section>
 
-    
+
 
 
     <section class="extended-content">
         <div class="footer">
-        2026 © Sophia Hatheway
-        <a href="projects.html" class="footer-right">Back to Top</a>
-    </div>
+            2026 © Sophia Hatheway
+            <a href="projects.html" class="footer-right">Back to Top</a>
+        </div>
 
     </section>
 
