--- a/about.html
+++ b/about.html
@@ -25,7 +25,14 @@
 
     <section class="content">
         <div class="header-content">
-            <div class="nav-bar">
+
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <div class="nav-bar" id="nav-menu">
                 <a href="index.html">Home</a> |
                 <a href="projects.html">Works</a> |
                 <a href="contact.html">Contact</a>
