--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,6 @@
                             <p>A meta-app for all-things dating related.</p>
                         </div>
                         <div class="project-full">
-                            <h3>Showcase</h3>
 
                             <p>This project was one of my first ever serious software development projects. I was
                                 the
@@ -211,8 +210,8 @@
                                 aesthetics and characters, but at its core it reflects
                                 nostalgia, civility, and educational morality that are rooted in Japanese culture.
                                 This
-                                paper explores
-                                how, why, and the importance of these values.
+                                paper explores the
+                                how and the why of the importance of these values.
                             </p>
                             <ul class="project-info">
                                 <li><strong>Paper:</strong> <a
