fixed linked in link

--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,7 @@
                 <ul class="contact-list">
                     <li><strong style="font-family: 'Poiret One', sans-serif;">Email:</strong> shatheway.dev@gmail.com
                     </li>
-                    <li><strong style="font-family: 'Poiret One', sans-serif;"><a
-                                href="https://www.linkedin.com/in/sophia-hatheway-28261a383/">LinkedIn</a></strong>
+                    <li><strong style="font-family: 'Poiret One', sans-serif;"><a href="https://www.linkedin.com/in/sophia-hatheway">LinkedIn</a></strong>
                     </li>
                     <li><strong style="font-family: 'Poiret One', sans-serif;"><a
                                 href="https://github.com/shathewaydev-design">GitHub</a></strong> </li>
